trustfall_core/test_data/tests/valid_queries/property_abs_transform_and_output.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(min: -1, max: 1) {
        value
            @output
            @transform(op: "abs")
            @output
    }
}"#,
    arguments: {},
)
