trustfall_core/test_data/tests/parse_errors/invalid_transform_value_type.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        value @transform(op: "+", value: 42) @output
    }
}"#,
    arguments: {},
)
